--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -30,15 +30,15 @@
         </div>
           <p class="review">"{{ movie.review }}"</p>
         <p class="overview">{{ movie.description }}</p>
-        <a href="{{ url_for('edit', id=movie.id) }}" class="button">Update</a>
-        <a href="{{ url_for('delete', id=movie.id) }}" class="button delete-button">Delete</a>
+        <a href="{{ url_for('main.edit', id=movie.id) }}" class="button">Update</a>
+        <a href="{{ url_for('main.delete', id=movie.id) }}" class="button delete-button">Delete</a>
       </div>
     </div>
   </div>
 {% endfor %}
 </div>
 <div class="container text-center add">
-<a href="{{ url_for('add') }}" class="button">Add Movie</a>
+<a href="{{ url_for('main.add') }}" class="button">Add Movie</a>
 </div>
 
 {% endblock %}
